测试counter exporter